@@ -302,7 +302,11 @@ if (TYPO3_MODE === 'BE')	{
 
 
 		// media folder type and icon
-	$ICON_TYPES['dam'] = array('icon' => PATH_txdam_rel.'modules_dam.gif');
+	if(t3lib_div::int_from_ver(TYPO3_version) < 4004000) {
+		$ICON_TYPES['dam'] = array('icon' => PATH_txdam_rel.'modules_dam.gif');
+	} else {
+		t3lib_SpriteManager::addTcaTypeIcon('pages', 'contains-dam', PATH_txdam_rel.'modules_dam.gif');
+	}
 	$TCA['pages']['columns']['module']['config']['items'][] = array('Media', 'dam', PATH_txdam_rel.'modules_dam.gif');
 
 
